# openmeeg

./: .gitignore  CMakeLists.txt  appveyor.yml
OpenMEEG/: CMakeLists.txt
OpenMEEG/Wrapping/src/: CMakeLists.txt  openmeeg.i  python_failure.py
OpenMEEG/cmake/: Findflens.cmake
OpenMEEG/libs/OpenMEEGMaths/include/: CMakeLists.txt  linop.h  matrix.h  orig_vector.h  symmatrix.h  vector.h
OpenMEEG/libs/OpenMEEGMaths/src/: matrix.cpp  symmatrix.cpp  vector.cpp
OpenMEEG/src/: CMakeLists.txt
libs/OpenMEEG/include/: domain.h  geometry.h
libs/OpenMEEG/src/: geometry.cpp
